# MotionDetector

./: CMakeLists.txt
include/: camera.hpp  logger.hpp
src/: camera.cpp  logger.cpp  main.cpp
